# Multi-bagger-Research

./: .env.example  .gitignore  README.md  pyproject.toml
sndk_detector/: __init__.py  config.py  db.py  graph.py  main.py  schemas.py  scoring.py  state.py  valuation.py
sndk_detector/nodes/: __init__.py  _llm.py  alert.py  classify_event.py  critic.py  decide.py  enrich.py  extract_evidence.py  hard_fail.py  ingest_news.py  ingest_screener.py  ingest_sec.py  normalize.py  output.py  score.py  score_blueprint.py  synthesize.py
sndk_detector/prompts/: blueprint_scorer.txt  critic.txt  enrich_financials.txt  enrich_research.txt  event_classifier.txt  financial_extractor.txt  memo_writer.txt  moat_extractor.txt  risk_disqualifier.txt  thesis_generator.txt
tests/: test_db.py  test_enrich.py  test_ingest_sec.py  test_scoring.py
